--- a/demos/graphtuitous/components/fib-node.yaml
+++ b/demos/graphtuitous/components/fib-node.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     git:
       url: https://github.com/jduimovich/graphtuitous
-      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e/main/devfiles/fib-node/devfile.yaml
+      devfileUrl: httpshttps://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/graphtuitous/devfiles/fib-node/devfile.yaml
   build:
     containerImage: quay.io/jduimovich0/fib-node
   
