--- a/demos/graphtuitous/components/fib-go.yaml
+++ b/demos/graphtuitous/components/fib-go.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   componentName: fib-go
   application: graphtuitous
+  containerImage: quay.io/jduimovich0/fib-go
   source:
     git:
       url: https://github.com/jduimovich/graphtuitous
