--- a/demos/graphtuitous/components/haproxy.yaml
+++ b/demos/graphtuitous/components/haproxy.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   componentName: haproxy
   application: graphtuitous
+  containerImage: quay.io/jduimovich0/haproxy
   source:
     git:
       url: https://github.com/jduimovich/graphtuitous
