--- a/demos/graphtuitous/components/fib-node.yaml
+++ b/demos/graphtuitous/components/fib-node.yaml
@@ -4,11 +4,12 @@ metadata:
   name: fib-node
 spec:
   componentName: fib-node
-  application: graphtuitous
+  application: graphtuitous 
+  containerImage: quay.io/jduimovich0/fib-node
   source:
     git:
       url: https://github.com/jduimovich/graphtuitous
-      devfileUrl: httpshttps://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/graphtuitous/devfiles/fib-node/devfile.yaml
+      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/graphtuitous/devfiles/fib-node/devfile.yaml
   build:
     containerImage: quay.io/jduimovich0/fib-node
   
