--- a/demos/graphtuitous/components/frontend.yaml
+++ b/demos/graphtuitous/components/frontend.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   componentName: frontend
   application: graphtuitous
+  containerImage: quay.io/jduimovich0/frontend
   source:
     git:
       url: https://github.com/jduimovich/graphtuitous
