--- a/demos/single-nodejs-app/components/sna.yaml
+++ b/demos/single-nodejs-app/components/sna.yaml
@@ -1,4 +1,4 @@
-apiVersion: appstudio.resingle-nodejs-appdhat.com/v1alpha1
+apiVersion: appstudio.redhat.com/v1alpha1
 kind: Component
 metadata:
   name: single-nodejs-app
