add-ons for nyc

--- a/demos/devfile-sample-go-basic/components/basic-go.yaml
+++ b/demos/devfile-sample-go-basic/components/basic-go.yaml
@@ -4,7 +4,7 @@ metadata:
   name: devfile-sample-go-basic
 spec:
   componentName: devfile-sample-go-basic
-  application: nyc-transit
+  application: devfile-sample-go-basic
   containerImage: quay.io/jduimovich0/devfile-sample-go-basic
   source:
     git:
