--- a/demos/nyc-transit/components/billing-service.yaml
+++ b/demos/nyc-transit/components/billing-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: Component
 metadata:
-  name: devfile-sample-code-with-quarkus
+  name: billing-service
 spec:
-  componentName: devfile-sample-code-with-quarkus
+  componentName: billing-service
   application: nyc-transit
   containerImage: quay.io/jduimovich0/devfile-sample-code-with-quarkus
   source:
