add direcory for nodejs (hack)

--- a/demos/single-nodejs-app/devfiles/devfile.yaml
+++ b/demos/single-nodejs-app/devfiles/devfile.yaml
@@ -10,7 +10,7 @@ components:
     image:
       imageName: single-nodejs-app:latest
       dockerfile:
-        uri: Dockerfile
+        uri: docker/Dockerfile
         buildContext: .
         rootRequired: false
   - name: outerloop-deploy
