--- a/demos/alpo-studio/components/build-service.yaml
+++ b/demos/alpo-studio/components/build-service.yaml
@@ -9,6 +9,8 @@ spec:
   source:
     git:
       url: https://github.com/redhat-appstudio/build-service
+      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/alpo-studio/devfiles/build-service/devfile.yaml
+
   build:
     containerImage: quay.io/jduimovich0/build-service
   
