--- a/demos/alpo-studio/components/managed-gitops.yaml
+++ b/demos/alpo-studio/components/managed-gitops.yaml
@@ -9,6 +9,7 @@ spec:
   source:
     git:
       url: https://github.com/redhat-appstudio/managed-gitops
+      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/alpo-studio/devfiles/managed-gitops/devfile.yaml
   build:
     containerImage: quay.io/jduimovich0/managed-gitops
   
