--- a/demos/alpo-studio/components/service-provider-integration-oauth.yaml
+++ b/demos/alpo-studio/components/service-provider-integration-oauth.yaml
@@ -9,6 +9,7 @@ spec:
   source:
     git:
       url: https://github.com/redhat-appstudio/service-provider-integration-oauth
+      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/alpo-studio/devfiles/service-provider-integration-oauth/devfile.yaml
   build:
     containerImage: quay.io/jduimovich0/service-provider-integration-oauth
   
