--- a/demos/alpo-studio/components/service-provider-integration-operator.yaml
+++ b/demos/alpo-studio/components/service-provider-integration-operator.yaml
@@ -9,6 +9,7 @@ spec:
   source:
     git:
       url: https://github.com/redhat-appstudio/service-provider-integration-operator
+      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/alpo-studio/devfiles/service-provider-integration-operator/devfile.yaml
   build:
     containerImage: quay.io/jduimovich0/service-provider-integration-operator
   
