--- a/demos/single-nodejs-app/devfiles/devfile.yaml
+++ b/demos/single-nodejs-app/devfiles/devfile.yaml
@@ -3,6 +3,8 @@ metadata:
   name: single-nodejs-app
   projectType: container
   language: container
+  attributes:
+    alpha.dockerimage-port: 8080
   version: 1.0.0
   provider: Red Hat  
 components:
