--- a/demos/nyc-transit/components/billing-service.yaml
+++ b/demos/nyc-transit/components/billing-service.yaml
@@ -6,6 +6,7 @@ spec:
   componentName: billing-service
   application: nyc-transit
   containerImage: quay.io/jduimovich0/devfile-sample-code-with-quarkus
+  targetPort: 8081
   source:
     git:
       url: https://github.com/devfile-samples/devfile-sample-code-with-quarkus
