--- a/demos/nyc-transit/components/map-service.yaml
+++ b/demos/nyc-transit/components/map-service.yaml
@@ -6,6 +6,7 @@ spec:
   componentName: map-service
   application: nyc-transit
   containerImage: quay.io/jduimovich0/dc-metro-map
+  targetPort: 8080
   source:
     git:
       url: https://github.com/sbose78/dc-metro-map
