--- a/demos/devfile-sample-go-basic/components/devfile-sample-go-basic.yaml
+++ b/demos/devfile-sample-go-basic/components/devfile-sample-go-basic.yaml
@@ -6,6 +6,7 @@ spec:
   componentName: devfile-sample-go-basic
   application: devfile-sample-go-basic
   containerImage: quay.io/jduimovich0/devfile-sample-go-basic
+  targetPort: 8081
   source:
     git:
       url: https://github.com/devfile-samples/devfile-sample-go-basic 
