--- a/demos/graphtuitous/add-ons/fibs-service/service.yaml
+++ b/demos/graphtuitous/add-ons/fibs-service/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: fibs-service
 spec:
   selector:
-    app.kubernetes.io/instance: fib-go       
+    app.kubernetes.io/instance: fib-service       
   ports:
   - port: 8080
     targetPort: 8080
