--- a/demos/sna/components/single-nodejs-app.yaml
+++ b/demos/sna/components/single-nodejs-app.yaml
@@ -5,12 +5,12 @@ metadata:
 spec:
   componentName: sna
   application: sna
-  containerImage: quay.io/redhat-appstudio/user-workload:sna
+  containerImage: quay.io/jduimovich0/sna
   targetPort: 8080
   source:
     git:
       url: https://github.com/jduimovich/single-nodejs-app
       devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/sna/devfiles/devfile.yaml
   build:
-    containerImage: quay.io/redhat-appstudio/user-workload:sna
+    containerImage: quay.io/jduimovich0/sna
   
