--- a/demos/sna/components/single-nodejs-app.yaml
+++ b/demos/sna/components/single-nodejs-app.yaml
@@ -5,12 +5,17 @@ metadata:
 spec:
   componentName: sna
   application: sna
-  containerImage: quay.io/jduimovich0/sna
+  containerImage: quay.io/redhat-appstudio/user-workload:jduimovich-sna
+  replicas: 1
+  resources:
+    requests:
+      cpu: 250m
+      memory: 512Mi
   targetPort: 8080
   source:
     git:
       url: https://github.com/jduimovich/single-nodejs-app
       devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/sna/devfiles/devfile.yaml
   build:
-    containerImage: quay.io/jduimovich0/sna
+    containerImage: quay.io/redhat-appstudio/user-workload:jduimovich-sna
   
