--- a/demos/sna/components/single-nodejs-app.yaml
+++ b/demos/sna/components/single-nodejs-app.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   componentName: sna
   application: sna
-  containerImage: quay.io/redhat-appstudio/user-workload:jduimovich-sna
+  containerImage: sna
   replicas: 1
   resources:
     requests:
@@ -17,5 +17,5 @@ spec:
       url: https://github.com/jduimovich/single-nodejs-app
       devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/sna/devfiles/devfile.yaml
   build:
-    containerImage: quay.io/redhat-appstudio/user-workload:jduimovich-sna
+    containerImage: sna
   
