--- a/demos/single-nodejs-app/components/single-nodejs-app.yaml
+++ b/demos/single-nodejs-app/components/single-nodejs-app.yaml
@@ -7,6 +7,11 @@ spec:
   application: single-nodejs-app
   containerImage: quay.io/jduimovich0/single-nodejs-app 
   targetPort: 8080
+  replicas: 1
+  resources:
+    requests:
+      cpu: 250m
+      memory: 512Mi
   source:
     git:
       url: https://github.com/jduimovich/single-nodejs-app
