--- a/demos/graphtuitous/components/frontend.yaml
+++ b/demos/graphtuitous/components/frontend.yaml
@@ -6,6 +6,11 @@ spec:
   componentName: frontend
   application: graphtuitous
   containerImage: quay.io/jduimovich0/frontend
+  replicas: 1
+  resources:
+    requests:
+      cpu: 100m
+      memory: 64Mi
   source:
     git:
       url: https://github.com/jduimovich/graphtuitous
