--- a/demos/nyc-transit/components/map-service.yaml
+++ b/demos/nyc-transit/components/map-service.yaml
@@ -7,6 +7,11 @@ spec:
   application: nyc-transit
   containerImage: quay.io/jduimovich0/dc-metro-map
   targetPort: 8080
+  replicas: 1
+  resources:
+    requests:
+      cpu: 250m
+      memory: 512Mi
   source:
     git:
       url: https://github.com/sbose78/dc-metro-map
