fix kcp image name in devfile

--- a/demos/kcp/devfiles/devfile.yaml
+++ b/demos/kcp/devfiles/devfile.yaml
@@ -8,7 +8,7 @@ metadata:
 components:
   - name: outerloop-build
     image:
-      imageName: service-provider-integration-operator:latest
+      imageName: kcp
       dockerfile:
         uri: Dockerfile
         buildContext: .
