--- a/demos/service-registry/components/service-registry.yaml
+++ b/demos/service-registry/components/service-registry.yaml
@@ -9,6 +9,7 @@ spec:
   source:
     git:
       url: https://github.com/Apicurio/apicurio-registry
+      revision: master
       devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/service-registry/devfiles/devfile.yaml
   build:
     containerImage: quay.io/jduimovich0/service-registry
