fix to all have services (workaround)
- matching changes to apps to work in App Studio

--- a/demos/graphtuitous/components/fib-node.yaml
+++ b/demos/graphtuitous/components/fib-node.yaml
@@ -5,7 +5,8 @@ metadata:
 spec:
   componentName: fib-node
   application: graphtuitous 
-  containerImage: quay.io/jduimovich0/fib-node
+  containerImage: quay.io/jduimovich0/fib-node 
+  targetPort: 8080
   replicas: 1
   resources:
     requests:
