--- a/demos/graphtuitous/components/frontend.yaml
+++ b/demos/graphtuitous/components/frontend.yaml
@@ -6,6 +6,7 @@ spec:
   componentName: frontend
   application: graphtuitous
   containerImage: quay.io/jduimovich0/frontend
+  targetPort: 8080
   replicas: 1
   resources:
     requests:
