--- a/demos/graphtuitous/components/fib-go.yaml
+++ b/demos/graphtuitous/components/fib-go.yaml
@@ -5,7 +5,8 @@ metadata:
 spec:
   componentName: fib-go
   application: graphtuitous
-  containerImage: quay.io/jduimovich0/fib-go
+  containerImage: quay.io/jduimovich0/fib-go 
+  targetPort: 8080
   replicas: 1
   resources:
     requests:
