--- a/demos/actions-to-appstudio/components/actions-to-appstudio.yaml
+++ b/demos/actions-to-appstudio/components/actions-to-appstudio.yaml
@@ -4,7 +4,7 @@ metadata:
   name: actions-to-appstudio
 spec:
   componentName: actions-to-appstudio
-  application: use-github-as-ci
+  application: actions-to-appstudio
   containerImage: ghcr.io/jduimovich/actions-to-appstudio:latest
   targetPort: 8080
   replicas: 1
