--- a/demos/ux-github-actions/components/actions-to-appstudio.yaml
+++ b/demos/ux-github-actions/components/actions-to-appstudio.yaml
@@ -12,5 +12,9 @@ spec:
     requests:
       cpu: 250m
       memory: 512Mi
+  source:
+    git:
+      url: https://github.com/jduimovich/actions-to-appstudio
+      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/ux-github-actions/devfiles/devfile.yaml
   build:
     containerImage: ghcr.io/jduimovich/ux-github-actions:latest
