--- a/demos/graphtuitous/components/graphtuitous-fe.yaml
+++ b/demos/graphtuitous/components/graphtuitous-fe.yaml
@@ -1,9 +1,9 @@
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: Component
 metadata:
-  name: frontend
+  name: graphtuitous-fe
 spec:
-  componentName: frontend
+  componentName: graphtuitous-fe
   application: graphtuitous
   containerImage: quay.io/jduimovich0/frontend
   targetPort: 8080
