--- a/demos/dogfood-builds/components/build-service.yaml
+++ b/demos/dogfood-builds/components/build-service.yaml
@@ -4,12 +4,12 @@ metadata:
   name: build-service
 spec:
   componentName: build-service
-  application: alpo-studio
+  application: dogfood-builds
   containerImage: quay.io/jduimovich0/build-service
   source:
     git:
       url: https://github.com/redhat-appstudio/build-service
-      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/alpo-studio/devfiles/build-service/devfile.yaml
+      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/dogfood-builds/devfiles/build-service/devfile.yaml
 
  
   
