--- a/demos/dogfood-builds/components/managed-gitops.yaml
+++ b/demos/dogfood-builds/components/managed-gitops.yaml
@@ -4,10 +4,10 @@ metadata:
   name: managed-gitops
 spec:
   componentName: managed-gitops
-  application: alpo-studio
+  application: dogfood-builds
   containerImage: quay.io/jduimovich0/managed-gitops
   source:
     git:
       url: https://github.com/redhat-appstudio/managed-gitops
-      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/alpo-studio/devfiles/managed-gitops/devfile.yaml
+      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/dogfood-builds/devfiles/managed-gitops/devfile.yaml
  
