--- a/demos/dogfood-builds/components/service-provider-integration-operator.yaml
+++ b/demos/dogfood-builds/components/service-provider-integration-operator.yaml
@@ -4,10 +4,10 @@ metadata:
   name: service-provider-integration-operator
 spec:
   componentName: service-provider-integration-operator
-  application: alpo-studio
+  application: dogfood-builds
   containerImage: quay.io/jduimovich0/service-provider-integration-operator
   source:
     git:
       url: https://github.com/redhat-appstudio/service-provider-integration-operator
-      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/alpo-studio/devfiles/service-provider-integration-operator/devfile.yaml
+      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/dogfood-builds/devfiles/service-provider-integration-operator/devfile.yaml
   
