--- a/demos/graphtuitous/app/application.yaml
+++ b/demos/graphtuitous/app/application.yaml
@@ -4,4 +4,4 @@ metadata:
   name: graphtuitous 
 spec:
   description: "graphtuitous built in App Studio"
-  displayName: graphtuitous
+  displayName: "graphtuitous - Multi-Component Application"
