--- a/demos/mongo-db-example/app/application.yaml
+++ b/demos/mongo-db-example/app/application.yaml
@@ -4,4 +4,4 @@ metadata:
   name: mongo-db-example 
 spec:
   description: "mongo-db-example built in App Studio"
-  displayName: mongo-db-example
+  displayName: "Mongo DB Example with Client and DB"
