--- a/demos/dogfood-builds/components/managed-gitops.yaml
+++ b/demos/dogfood-builds/components/managed-gitops.yaml
@@ -6,6 +6,7 @@ spec:
   componentName: managed-gitops
   application: dogfood-builds
   containerImage: quay.io/jduimovich0/managed-gitops
+  skipGitOpsResourceGeneration: true
   source:
     git:
       url: https://github.com/redhat-appstudio/managed-gitops
