--- a/demos/kcp/app/application.yaml
+++ b/demos/kcp/app/application.yaml
@@ -4,4 +4,5 @@ metadata:
   name: kcp 
 spec:
   description: "KCP - Build Only Demo"
-  displayName: "KCP - Build Only Demo"
+  # displayName: "KCP - Build Only Demo"
+  displayName: "kcp"
