--- a/demos/single-container-app/devfiles/devfile.yaml
+++ b/demos/single-container-app/devfiles/devfile.yaml
@@ -3,12 +3,14 @@ metadata:
   name: single-container-app
   projectType: container
   language: container
+  attributes:
+    alpha.dockerimage-port: 8080
   version: 1.0.0
   provider: Red Hat  
 components:
   - name: outerloop-build
     image:
-      imageName: single-container-app:latest
+      imageName: single-container-app
       dockerfile:
         uri: Dockerfile
         buildContext: .
@@ -16,4 +18,4 @@ components:
 commands:
   - id: build-image
     apply:
-      component: outerloop-build 
+      component: outerloop-build
