displayName: as kube name only
give up on fancy pretty names

--- a/demos/burr-spring-sample/app/application.yaml
+++ b/demos/burr-spring-sample/app/application.yaml
@@ -3,6 +3,5 @@ kind: Application
 metadata:
   name: burr-spring-sample
 spec:
-  description: "Burr Spring Sample"
-  displayName: "Spring Boot® using Maven by Burr Sutter" 
-  # displayName: "burr-spring-sample" 
+  description: "Burr Spring Sample" 
+  displayName: "burr-spring-sample" 
