--- a/demos/single-nodejs-app/app/application.yaml
+++ b/demos/single-nodejs-app/app/application.yaml
@@ -3,6 +3,5 @@ kind: Application
 metadata:
   name: single-nodejs-app
 spec:
-  description: "Demo of Node.js App, no dev or dockerfile"
-  displayName: "Node.js App - single container"
-  # displayName: "single-nodejs-app"
+  description: "Demo of Node.js App, no dev or dockerfile" 
+  displayName: "single-nodejs-app"
