--- a/demos/dogfood-builds/app/application.yaml
+++ b/demos/dogfood-builds/app/application.yaml
@@ -3,6 +3,5 @@ kind: Application
 metadata:
   name: dogfood-builds
 spec:
-  description: "Builds of selected components from Stone Soup (dogfooding)"
-  # displayName: "Stone Soup (dogfooding) of selected builds (no deploy)"
-  displayName: "dogfood-builds"
+  description: "Builds of selected components from Stone Soup (dogfooding)" 
+  displayName: "stone-soup-dogfood-builds"
