--- a/demos/graphtuitous/components/fib-go.yaml
+++ b/demos/graphtuitous/components/fib-go.yaml
@@ -15,4 +15,4 @@ spec:
   source:
     git:
       url: https://github.com/jduimovich/graphtuitous
-      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/graphtuitous/devfiles/fib-go/devfile.yaml
+      context: fib-go
