--- a/demos/graphtuitous/components/frontend.yaml
+++ b/demos/graphtuitous/components/frontend.yaml
@@ -15,4 +15,5 @@ spec:
   source:
     git:
       url: https://github.com/jduimovich/graphtuitous
-      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/graphtuitous/devfiles/frontend/devfile.yaml
+      context: frontend
+ 
