--- a/demos/graphtuitous/components/haproxy.yaml
+++ b/demos/graphtuitous/components/haproxy.yaml
@@ -15,5 +15,4 @@ spec:
   source:
     git:
       url: https://github.com/jduimovich/graphtuitous
-      devfileUrl: https://raw.githubusercontent.com/jduimovich/appstudio-e2e-demos/main/demos/graphtuitous/devfiles/haproxy/devfile.yaml
-      
+      context: haproxy 
